--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta name="author" content="Abdu Karim Bageya">
     <meta name="robots" content="index, follow">
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FTJ14H7R52"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FTJ14H7R52');
+</script>
+    
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Abdu Karim Bageya - Software Engineer Portfolio">
     <meta property="og:description" content="Professional Software Engineer Portfolio showcasing projects, skills, and experience">
