--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                                 </div>
                                 <div class="contact-text">
                                     <h4>Email</h4>
-                                    <p>abdu.karim.bageya@email.com</p>
+                                    <p>contact@abdukarim.space</p>
                                 </div>
                             </div>
                             <div class="contact-item">
@@ -655,7 +655,7 @@
                                 </div>
                                 <div class="contact-text">
                                     <h4>Phone</h4>
-                                    <p>+1 (555) 123-4567</p>
+                                    <p>+256764081828</p>
                                 </div>
                             </div>
                             <div class="contact-item">
@@ -664,7 +664,7 @@
                                 </div>
                                 <div class="contact-text">
                                     <h4>Location</h4>
-                                    <p>New York, NY</p>
+                                    <p>Pader, UGANDA</p>
                                 </div>
                             </div>
                         </div>
@@ -678,7 +678,7 @@
                             <a href="https://twitter.com/your-handle" target="_blank" rel="noopener noreferrer" aria-label="Twitter">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a href="mailto:abdu.karim.bageya@email.com" aria-label="Email">
+                            <a href="mailto:contact@abdukarim.space" aria-label="Email">
                                 <i class="fas fa-envelope"></i>
                             </a>
                         </div>
