--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
                                 </div>
                                 <div class="contact-text">
                                     <h4>Email</h4>
-                                    <p>contact@abdukarim.space</p>
+                                    <p><a href="mailto:contact.abdukarim.space">contact@abdukarim.space</a></p>
                                 </div>
                             </div>
                             <div class="contact-item">
@@ -657,7 +657,7 @@
                                 </div>
                                 <div class="contact-text">
                                     <h4>Phone</h4>
-                                    <p>+256764081828</p>
+                                    <p><a href="tel:0764081828">+256764081828</a></p>
                                 </div>
                             </div>
                             <div class="contact-item">
@@ -671,7 +671,7 @@
                             </div>
                         </div>
                         <div class="social-links-contact">
-                            <a href="https://github.com/your-username" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+                            <a href="https://github.com/karee" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="https://linkedin.com/in/your-profile" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
